[tool.poetry]
name = "testpoetry"
version = "0.1.0"
description = ""
authors = ["codeking <codekingbear@gmail.com>"]
readme = "README.md"
# 这个是镜像源配置
[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.10"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
